# gost-report-skill

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: usage.md
examples/: data.json
scripts/: __init__.py  generate_docx.py
skill/: SKILL.md
